--- a/index.html
+++ b/index.html
@@ -97,11 +97,10 @@
       };
 
       const res = await fetch(SCRIPT_URL, {
-        method:"POST",
-        headers:{ "Content-Type":"application/json" },
-        body: JSON.stringify(payload)
-      });
-
+  method: "POST",
+  headers: { "Content-Type": "text/plain;charset=utf-8" },
+  body: JSON.stringify(payload)
+});
       const data = await res.json().catch(()=>({ok:false}));
       msg.textContent = data.ok
         ? "✅ Đã gửi đơn. Chờ admin xử lý."
